completed project - added matching recipes + seeders + modified appropriate apis
