# src/routes/dashboard.ts
@@ -70,27 +70,5 @@ export default {
         } catch (err) {
             next(err);
         }
-    },
-
-    getMatchingRecipes: async (
-        req: Request,
-        res: Response,
-        next: NextFunction
-
-    ) => {
-        try {
-            const {
-                recipeId
-
-            } = req.body;
-
-            const result = await dashCtl.getMatchingRecipes(
-                recipeId
-            )
-            res.status(200).json(result);
-
-        } catch (err) {
-            next(err);
-        }
-    },
+    }
 }
