# src/routes/definition.ts
@@ -25,8 +25,7 @@ const routes = {
     swaggerURI: '/__swagger',
     dashboard: {
         getRecipes: `${apiRoute}/dashboard/get-recipes`,
-        getRecipeDetails: `${apiRoute}/dashboard/get-recipe-details`,
-        getMatchingRecipes: `${apiRoute}/dashboard/get-matching-recipes:`,
+        getRecipeDetails: `${apiRoute}/dashboard/get-recipe-details`
     }
 };
 
